crates/plotnik-tests/tests/02-parser/recovery_validation/captured_negated_field.txt
Q = (pair -key @x)
------------------ DIAGNOSTICS -------------------
error: negated fields cannot be captured
 --> query.ptk:1:16
  |
1 | Q = (pair -key @x)
  |                ^^
  |
help: remove the capture
  |
1 - Q = (pair -key @x)
1 + Q = (pair -key )
  |
help: a negated field asserts absence and produces no value
